@@ -1,13 +1,22 @@
 #-*- coding:utf-8 -*-
 # __author__ = 'linjie'
 from django.conf.urls.defaults import patterns, include, url
-from .view import popularize_Cost
 from django.contrib.admin.views.decorators import staff_member_required
+
+from rest_framework import routers, viewsets
+
 from view_repeat_stats import StatsRepeatView, StatsSaleView, StatsSalePeopleView
 from views_stats_performance import StatsPerformanceView, StatsSupplierView, StatsSaleProdcutView
 import views_operate
 import views_input_stat
 import views_stats_fahuo
+
+from .view import popularize_Cost, DailyStatsViewSet
+
+
+router = routers.DefaultRouter(trailing_slash=False)
+router.register(r'daily_stats', DailyStatsViewSet, 'daily_stats')
+
 urlpatterns = patterns('',
     url(r'^popu_cost/', popularize_Cost, name="popularize_Cost"),
     url(r'^stats_repeat/$', staff_member_required(StatsRepeatView.as_view()), name="stats_repeat"),
@@ -27,3 +36,4 @@ urlpatterns = patterns('',
     url(r'^supplier_preview/$', staff_member_required(views_operate.SupplierPreviewView.as_view())),  #供应所预览
     url(r'^daily_hui/$', staff_member_required(views_stats_fahuo.StatsFahuoView.as_view())),  #每日汇总
 )
+urlpatterns += router.urls
